k8s/bolabaden/raw/jackett-deployment.yml
#! jackett-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: my-media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      restartPolicy: Always
      containers:
        - name: jackett
          image: linuxserver/jackett
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1002
            runAsGroup: 988
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl -fs http://127.0.0.1:9117/api/v2.0/indexers/all/results/torznab?t=indexers&apikey=nnx0n84pcj7umynyd2pbid2nl1zzuemz || exit 1
            periodSeconds: 30
            initialDelaySeconds: 60
            timeoutSeconds: 10
          ports:
            - name: jackett-9117
              containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: config
          hostPath:
            path: /home/ubuntu/my-media-stack/configs/jackett/config
