k8s/bolabaden/raw/speedtest-deployment.yml
#! speedtest-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: my-media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      restartPolicy: Always
      containers:
        - name: speedtest
          image: linuxserver/speedtest-tracker
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl -fs http://127.0.0.1:80 > /dev/null || exit 1
            periodSeconds: 30
            initialDelaySeconds: 20
            timeoutSeconds: 15
          ports:
            - name: speedtest-443
              containerPort: 443
            - name: speedtest-80
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-keys
              mountPath: /config/keys
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          hostPath:
            path: /home/ubuntu/my-media-stack/configs/speedtest-tracker/config
        - name: config-keys
          hostPath:
            path: /home/ubuntu/my-media-stack/certs/speedtest-tracker/keys
