k8s/bolabaden/raw/dash-expose.yml
#! dash-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: dash
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: dash-3001
      port: 3001
      targetPort: dash-3001
