k8s/bolabaden/raw/prowlarr-expose.yml
#! prowlarr-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: prowlarr-9696
      port: 9696
      targetPort: prowlarr-9696
