k8s/bolabaden/raw/searxng-expose.yml
#! searxng-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: searxng
    namespace: my-media-stack
spec:
    selector: {}
    ports:
        - name: searxng-8080
          port: 8080
          targetPort: searxng-8080
